test-suite/bugs/opened/HoTT_coq_103.v
Fail Check (nat : Type) : Set.
(* Error:
The term "nat:Type" has type "Type" while it is expected to have type
"Set" (Universe inconsistency). *)
